# fdasrsf_python

./: .codecov.yml  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGES.txt  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  README.txt  __init__.py  appveyor.yml  environment-dev.yml  environment.yml  fdasrsf.sublime-project  fdasrsf.sublime-workspace  plot_style.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  utility_functions.py
.github/workflows/: python-package-conda.yml  python-package.yml  python-publish.yml
binder/: apt.txt  environment.yaml  requirements.txt  trigger_binder.sh
debug/: debug_data.h5  debug_data.py  debug_data_oc.h5  debug_data_oc.py  debug_data_oc_logit.h5  debug_data_oc_mlogit.py  debug_warp_mlogistic.py  debug_warp_oclogistic.py  debug_warp_ocmlogistic.py  debugc_warp_mlogistic.py  debugc_warp_oclogistic.py  debugc_warp_ocmlogistic.py  oc_karcher.py  oc_logit.py  ps_geod.py  test_oc_geod.py  test_oc_karcher.py  test_oc_logit.py  test_oc_mlogit.py  test_ps_geod.py
doc/: requirements.txt
doc/_static/: switcher.json
doc/source/: api.rst  boxplots.rst  conf.py  contents.rst  curve_example.ipynb  elastic_changepoint.rst  elastic_glm_regression.rst  example_mvwarping.ipynb  fPLS.rst  fPNS.rst  fpca_example.ipynb  geodesic.rst  image.rst  index.rst  kmeans.rst  pcr_regression.rst  time_warping.rst  time_warping_example.ipynb  user_guide.rst  utility_functions.rst
fdasrsf/: PPD.py  __init__.py  _distributor_init.py  bayesian_functions.py  boxplots.py  curve_functions.py  curve_pcr_regression.py  curve_regression.py  curve_stats.py  elastic_changepoint.py  elastic_glm_regression.py  ex_srsf_align.py  fPCA.py  fPLS.py  fPNS.py  gauss_model.py  geodesic.py  geometry.py  gp.py  image.py  image_functions.py  interparc.py  kmeans.py  pcr_regression.py  plot_style.py  pns.py  rbfgs.py  regression.py  time_warping.py  tolerance.py  umap_metric.py  utility_functions.py
fdasrsf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: example_cluster.ipynb  example_curve.ipynb  example_fpca.ipynb  example_mvwarping.ipynb  example_warping.ipynb
src/: DP.c  DP.h  DynamicProgrammingQ2.c  DynamicProgrammingQ2.h  ImageRegister.h  UnitSquareImage.cpp  UnitSquareImage.h  bayesian.cpp  bayesian.h  c8lib.c  c8lib.h  cDP.pxd  cDPQ.pxd  cDPg.pxd  cUnitSquareImage.pxd  cbayesian.cpp  cbayesian.pxd  cbayesian.pyx  cfPLS.pxd  cmlogit.pxd  coclogit.pxd  cocmlogit.pxd  crbfgs.pxd  crbfgs.pyx  cyarma.pxd  cyarma.pyx  dp_build.py  dp_grid.c  dp_grid.h  dp_nbhd.c  dp_nbhd.h  fpls_warp.c  fpls_warp.pyx  fpls_warp_grad.c  fpls_warp_grad.h  imagecpp.cpp  imagecpp.pyx  matrix_exponential.c  matrix_exponential.h  misc_funcs.c  (+31 more)
src/armadillo_bits/: rbfgs.h
src/gropt/: Makefile  Makefile_win
src/gropt/incl/: DriverElasticCurvesRO.h  ElasticCurvesRO.h  ElasticCurvesReparam.h  Element.h  EucFrechetMean.h  EucVariable.h  EucVector.h  Euclidean.h  ForDebug.h  GrassVariable.h  GrassVector.h  Grassmann.h  L2Sphere.h  L2SphereVariable.h  L2SphereVector.h  LRBFGS.h  LRBFGSLPSub.h  LRTRSR1.h  LinearOPE.h  LowRank.h  LowRankVariable.h  LowRankVector.h  Manifold.h  MinPNormConHull.h  MyMatrix.h  Oblique.h  ObliqueVariable.h  ObliqueVector.h  OrthGroup.h  OrthGroupVariable.h  OrthGroupVector.h  Problem.h  ProductElement.h  ProductManifold.h  QuasiNewton.h  RBFGS.h  RBFGSLPSub.h  RBroydenFamily.h  RCG.h  RNewton.h  (+25 more)
src/gropt/src/: DriverElasticCurvesRO.cpp  ElasticCurvesRO.cpp  ElasticCurvesReparam.cpp  Element.cpp  EucFrechetMean.cpp  EucVariable.cpp  EucVector.cpp  Euclidean.cpp  ForDebug.cpp  GrassVariable.cpp  GrassVector.cpp  Grassmann.cpp  L2Sphere.cpp  L2SphereVariable.cpp  L2SphereVector.cpp  LRBFGS.cpp  LRTRSR1.cpp  LinearOPE.cpp  LowRank.cpp  LowRankVariable.cpp  LowRankVector.cpp  Manifold.cpp  MinPNormConHull.cpp  MyMatrix.cpp  Oblique.cpp  ObliqueVariable.cpp  ObliqueVector.cpp  OrthGroup.cpp  OrthGroupVariable.cpp  OrthGroupVector.cpp  Problem.cpp  ProductElement.cpp  ProductManifold.cpp  QuasiNewton.cpp  RBFGS.cpp  RBroydenFamily.cpp  RCG.cpp  RNewton.cpp  RSD.cpp  RTRNewton.cpp  (+19 more)
test/: test_all.py
